fixed horizontal overflow on small screen

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
 
 .wrapper {
   min-height: 100vh;
-  max-width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -98,10 +97,8 @@ li::marker {
 }
 .msg {
   color: #00adb5;
-  width: 300px;
-  border-radius: 5px;
-  padding: 5px;
   font-size: 30px;
+  padding: 15px 15px;
   text-align: center;
   margin-bottom: 30px;
 }
@@ -137,7 +134,14 @@ li::marker {
   .clock {
     border-radius: 0;
   }
+  .timer {
+    font-size: 45px;
+  }
+  .control-btn {
+    max-width: 60px;
+    padding: 10px 15px;
+  }
   .description {
-    width: 90%;
+    width: 85%;
   }
 }
